# ReplayClipper

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h  Clipper.cpp  Clipper.h  DirectoryNavigator.cpp  DirectoryNavigator.h  FileTree.cpp  FileTree.h  Logging.h  Main.cpp  Stopwatch.h  VideoFile.cpp  VideoFile.h  VideoStream.cpp  VideoStream.h
